--- a/styles/MenuSidebar.module.scss
+++ b/styles/MenuSidebar.module.scss
@@ -1,51 +1,48 @@
 // styles/MenuSidebar.module.scss
 
-// .header {
-//     text-align: center;
-//     h2 {
-//       padding: 24px;
-//       letter-spacing: 1px;
-//       overflow: hidden;
-//       text-overflow: ellipsis;
-//       white-space: nowrap;
-//     }
-//   }
-
-//   .footer {
-//     text-align: center;
-//   }
-
-//   .wrapButton {
-//     padding: 20px 24px;
-
-//     .fontProfile {
-//       font-size: 2rem;
-//     }
-//   }
-
+/* Sidebar general */
 .sidebar {
   position: relative;
 }
 
-.sidebarMenu {
-  height: 100%;
-}
+/* Boton de activación para expandir y contraer el sidebar */
+$size-button: 1.6rem;
 
-.toogleSidebar {
+.sidebarToogleButton {
   color: var(--primary);
   border: none;
   border-radius: 50%;
-  width: 2.4rem;
-  height: 2.4rem;
+  width: $size-button;
+  height: $size-button;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: var(--gray-light);
-  padding: 0.5rem;
+  padding: 0.2rem;
   position: absolute;
-  top: calc(50vh - 2.4rem);
-  right: -1.2rem;
-  font-size: 1.6rem;
+  top: calc(50vh - $size-button);
+  right: calc(-1 * ($size-button/2));
+  font-size: 1rem;
   cursor: pointer;
   z-index: 10;
+}
+
+/* Menu del Sidebar */
+.sidebarMenu {
+  height: 100%;
+}
+
+/* Footer del sidebar */
+.sidebarFooterWrapper {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 0.5rem;
+}
+
+.sidebarFooter {
+  display: flex;
+
+  > div {
+    margin-top: 1.6rem;
+  }
 }
