--- a/styles/Loader.module.scss
+++ b/styles/Loader.module.scss
@@ -18,7 +18,7 @@
     width: 0.075em;
     height: 0.225em;
     border-radius: 20%;
-    background: var(--gray-dark);
+    background: var(--gray-900);
   }
 
   div:nth-child(1) {
