--- a/styles/App.scss
+++ b/styles/App.scss
@@ -23,7 +23,7 @@
 }
 
 // $body-bg: #f5f5f5;
-$blue: #122363;
+$blue: #114084;
 $green: #146b28;
 $white: #fff;
 $black: #000;
@@ -40,22 +40,34 @@ $font-size-base: 0.875rem;
 @import "~bootstrap/scss/bootstrap.scss";
 
 :root {
-  --black: #1c1c1c;
-  --blue: rgb(17, 64, 132);
-  --light-blue: #82b7dc;
-  --primary: rgb(1, 46, 64);
-  --blue-secondary: rgb(5, 51, 69);
-  --color-dark: #115e7c;
-  --blue-tertiary: #026773;
-  --green: #33d150;
-  --green-dark: #3ca6a6;
-  --vintage: #eee1d4;
-  --white: #f8f8f8;
-  --gray: #c3c3c3;
-  --gray-light: #e6e6e6;
+  --black: #{$black};
+  --blue-100: #{$blue-100};
+  --blue-200: #{$blue-200};
+  --blue-300: #{$blue-300};
+  --blue-400: #{$blue-400};
+  --blue: #{$blue};
+  --blue-600: #{$blue-600};
+  --primary: #{$primary};
+  --green: #{$green};
+  --purple-100: #{$purple-100};
+  --purple-200: #{$purple-200};
+  --purple-300: #{$purple-300};
+  --purple-400: #{$purple-400};
+  --purple: #{$purple};
+  --yellow-100: #{$yellow-100};
+  --yellow: #{$yellow};
+  --white: #{$white};
+  --gray-100: #{$gray-100};
+  --gray-200: #{$gray-200};
+  --gray-300: #{$gray-300};
+  --gray-400: #{$gray-400};
+  --gray-500: #{$gray-500};
+  --gray-600: #{$gray-600};
+  --gray-700: #{$gray-700};
+  --gray-800: #{$gray-800};
+  --gray-900: #{$gray-900};
   --gray-light-transparent: rgba(230, 230, 230, 0.1);
-  --gray-dark: #808080;
-  --red: #b31313;
+  --red: #{$red};
 }
 
 * {
