--- a/styles/Button.module.scss
+++ b/styles/Button.module.scss
@@ -1,60 +1,34 @@
 // styles/Button.module.scss
 
 .buttonLight {
-  padding: 0.5rem 1.6rem;
-  border-radius: 0.4rem;
+  background-color: var(--white);
   border: none;
-  cursor: pointer;
-  display: inline-block;
-  background-color: var(--white);
   color: var(--primary);
+  cursor: pointer;
   text-decoration: none;
-  &:hover {
-    color: var(--gray-600);
-  }
-}
+  padding: 0.5rem 1.6rem;
 
-.buttonDark {
-  width: 2.6rem;
-  height: 2.6rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  border-radius: 50%;
-  color: var(--primary);
-  // background: linear-gradient(45deg, var(--primary) 0%, var(--light-blue) 100%);
-  background-color: var(--white);
-}
-
-.buttonCardUserWrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  > a {
-    padding: 0.5rem 1.6rem;
+  &.semiRound {
     border-radius: 4rem;
-    background: var(--white);
-    color: var(--primary);
-    text-decoration: none;
-    margin: 0 auto;
-    height: 3rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    > svg {
-      font-size: 2rem;
-    }
-    span {
-      margin-left: 0.5rem;
-      font-size: 1rem;
-    }
+    display: inline-block;
+
     &:hover {
       color: var(--gray-600);
+    }
+  }
+
+  &.round {
+    align-items: center;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    height: 2rem;
+    justify-content: center;
+    padding: 0;
+    width: 2rem;
+
+    span {
+      display: none;
     }
   }
 }
