--- a/styles/MenuSidebar.module.scss
+++ b/styles/MenuSidebar.module.scss
@@ -32,40 +32,31 @@ $size-button: 1.6rem;
   height: 100%;
 
   > div {
-    display: "flex";
-    flex-direction: "column";
-    height: "100%";
+    display: flex;
+    flex-direction: column;
+    height: 100%;
   }
 }
 
-/* Footer del sidebar */
-.sidebarFooterWrapper {
+.sidebarSectionWrapper {
   display: flex;
-  justify-content: center;
-  padding-bottom: 0.5rem;
+  flex-direction: column;
+  align-items: center;
 }
 
-.sidebarFooter {
-  display: flex;
-
-  > div {
-    margin-top: 1.6rem;
-  }
+/* Header del sidebar */
+.sidebarSectionHeaderWrapper {
+  margin-bottom: 2.4rem;
+  margin-top: 1.6rem;
 }
-
+/* Contenido del menu */
 .sidebarContent {
   flex: 1;
   margin-bottom: 3.2rem;
 }
 
-/* Header del sidebar */
-.sidebarHeaderWrapper {
-  margin-bottom: 2.4rem;
+/* Footer del sidebar */
+.sidebarSectionFooterWrapper {
+  padding-bottom: 0.5rem;
   margin-top: 1.6rem;
-
-  > div {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  }
 }
