--- a/styles/MenuSidebar.module.scss
+++ b/styles/MenuSidebar.module.scss
@@ -17,7 +17,8 @@ $size-button: 1.6rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--gray-400);
+  background-color: var(--gray-100);
+  box-shadow: var(--primary) 0px 0px 0.2rem;
   padding: 0.2rem;
   position: absolute;
   top: calc(50vh - $size-button);
